2002-12-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaList.c: Add checks for deallocated
	Tcl objects when TCL_MEM_DEBUG is defined.
	* src/native/javaObj.c (JavaObjInit): Use  Tcl_GetObjType
	to lookup the tcl list type pointer. Add checks for
	deallocated Tcl objects when TCL_MEM_DEBUG is defined.

2002-12-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaInterp.c (Java_tcl_lang_Interp_setVar):
	* tests/tclblend/javaInterp.test:
	Plug a memory leak in Interp.setVar when
	appending to a string variable. Add test
	case that demonstrates the memory leak.

2002-12-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaCmd.c (JavaInitEnv): Comment
	out code that deallocated JVM options. It seems
	that some buggy JVMs don't copy the arguments
 	passed into JNI_CreateJavaVM.

2002-12-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaCmd.c (JavaInitEnv): Free memory
	allocated for JVM options and classpath.

2002-12-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/TclObject.java (disposedCheck):
	Add helper method that will raise an error if
	a TclObject method is called after the object
	has been disposed of. Invoke this method at
	the begining of each public TclOject api.

2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/CallFrame.java (chain,
	wrongNumProcArgs):
	* tests/jacl/Interp.test:
	* tests/tcl/compile.test:
	* tests/tcl/proc-old.test:
	* tests/tcl/proc.test:
	Update Jacl error message when proc is
	called with wrong number of args to match
	Tcl 8.4 implementation. Update tests.

2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaCallCmd.java (cmdProc):
	* src/tcljava/tcl/lang/JavaInvoke.java (callMethod,
	callStaticMethod):
	* src/tcljava/tcl/lang/ReflectObject.java (cmdProc):
	* tests/tclblend/javaObj.test:
	Don't set the interp result after invoking a
	void Java method. This is functionally equivalent